Stream prepation 3 & Sealed, record are implemented