@@ -11,7 +11,20 @@
 	<artifactId>kafka-producer</artifactId>
 	<name>kafka-producer</name>
 	<description>Demo project for Kafka implementation</description>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>21</source>
+					<target>21</target>
+					<compilerArgs>--enable-preview</compilerArgs>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 
 
-<!--	<dependencies></dependencies>-->
+	<!--	<dependencies></dependencies>-->
 </project>
